@@ -353,3 +353,4 @@ Revision	Version Updated		Log Message
 338		C++			Fixed typo with bureaucratic despotism reforms.
 339		C++			Added Korea1821_01_02_ConverterMod0.5 save.
 340		C++			Tab before "last_election" in output
+341		C++			Social reforms no longer in a temp function (no functional change).
